--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
-/captures
+*.apk
+*.iml
+local.properties
+.idea
+build
+captures
 .externalNativeBuild
+/app/fabric.properties
