메인화면, 기본수칙 버튼 수정 및 strings 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".SafetyActivity" />
         <activity android:name=".DrugActivity" />
         <activity android:name=".ChemistryActivity" />
-        <activity android:name=".ChemistryDetailActivity"></activity>
+        <activity android:name=".ChemistryDetailActivity" />
+        <activity android:name=".SafetyRuleActivity"></activity>
     </application>
 
 </manifest>
