--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Warn.WarnPvaActivity"></activity>
+        <activity android:name=".DrugDetailActivity" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -25,7 +27,7 @@
         <activity android:name=".DrugActivity" />
         <activity android:name=".ChemistryActivity" />
         <activity android:name=".ChemistryDetailActivity" />
-        <activity android:name=".SafetyRuleActivity"></activity>
+        <activity android:name=".SafetyRuleActivity"/>
     </application>
 
 </manifest>
