--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Warn.WarnPvaActivity"></activity>
-        <activity android:name=".DrugDetailActivity" />
+        <activity android:name=".Drug.Warn.WarnBenzeneActivity"></activity>
+        <activity android:name=".Drug.Warn.WarnTolueneActivity" />
+        <activity android:name=".Drug.Warn.WarnEthanolActivity" />
+        <activity android:name=".Drug.Warn.WarnWaterActivity" />
+        <activity android:name=".Drug.Warn.WarnPvaActivity" />
+        <activity android:name=".Drug.DrugDetailActivity" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,10 +28,10 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".FirstActivity" />
         <activity android:name=".SafetyActivity" />
-        <activity android:name=".DrugActivity" />
+        <activity android:name=".Drug.DrugActivity" />
         <activity android:name=".ChemistryActivity" />
         <activity android:name=".ChemistryDetailActivity" />
-        <activity android:name=".SafetyRuleActivity"/>
+        <activity android:name=".SafetyRuleActivity" />
     </application>
 
 </manifest>
