학년 버튼 클릭 시, 라디오 버튼 선택 팝업창 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,9 @@
         <activity android:name=".ToxicCompoundActivity" />
         <activity android:name=".AcidAlkalineCompoundsActivity" />
         <activity android:name=".Experiment.ExperimentActivity" />
-        <activity android:name=".Pop"
-            android:theme="@style/AppTheme.Pop">
-        </activity>
+        <activity
+            android:name=".Pop"
+            android:theme="@style/AppTheme.Pop"></activity>
     </application>
 
 </manifest>
