--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tool.ToolDetailActivity"></activity>
+        <activity android:name=".Tool.ToolDetailActivity" />
         <activity android:name=".Tool.ToolActivity" />
         <activity
             android:name=".SplashScreen"
@@ -51,6 +51,8 @@
         <activity
             android:name=".Pop"
             android:theme="@style/AppTheme.Pop" />
+        <activity android:name=".Experiment.ExperimentSeletedClass" />
+        <activity android:name=".Experiment.ExperimentDetailActivity"></activity>
     </application>
 
 </manifest>
