공지사항 리스트, 글쓰기 서버 연동, 로그아웃 구현, 자동로그인 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,8 +53,8 @@
             android:theme="@style/AppTheme.Pop" />
         <activity android:name=".Experiment.ExperimentSeletedClass" />
         <activity android:name=".Experiment.ExperimentDetailActivity" />
-        <activity android:name=".NoticeDetailActivity" />
-        <activity android:name=".NoticeWriteActivity"></activity>
+        <activity android:name=".Notice.NoticeDetailActivity" />
+        <activity android:name=".Notice.NoticeWriteActivity"></activity>
     </application>
 
 </manifest>
