--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-<<<<<<< HEAD
-    compileSdkVersion 25
-    buildToolsVersion "24.0.0"
-    defaultConfig {
-        applicationId "com.example.leeph.smartlaps"
-        minSdkVersion 15
-        targetSdkVersion 25
-=======
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.leeph.smartlaps"
         minSdkVersion 21
         targetSdkVersion 26
->>>>>>> ff5599a4b217cb08e5c0806c63e5e92592745949
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,25 +26,13 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-<<<<<<< HEAD
-    compile 'com.android.volley:volley:1.1.1'
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-=======
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:design:26.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     testImplementation 'junit:junit:4.12'
->>>>>>> ff5599a4b217cb08e5c0806c63e5e92592745949
 }
